# GTD

./: bump.config.ts  bun.lockb  nuxt.config.ts  package.json  uno.config.ts
app/modules/: tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
