[package]
name = "gtd"
version = "0.0.4"

[lib]
name = "gtd_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies.tauri-build]
version = "2.0.0-rc.0"
features = [ ]

[dependencies]
tauri-plugin-shell = "2.0.0-rc.0"
tauri-plugin-notification = "2.0.0-rc.0"
tauri-plugin-os = "2.0.0-rc.0"
tauri-plugin-fs = "2.0.0-rc.0"
serde_json = "1"

[dependencies.tauri]
version = "2.0.0-rc.0"
features = [ ]

[dependencies.serde]
version = "1"
features = [ "derive" ]
